--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <td><h1>Animesh Ghosh </h1>
                 <h2>Co-Founder and CTO of LMCD </h2>
                 
-                <h2>I am an Web developer. I ❤ coffe </h2></td>
+                <h2>I am a Web developer. I ❤ coffe </h2></td>
         </tr>
     </table>
     <hr size="3">
     <h2>Books and Staff</h2>
     <ul>
-        <li><em><b> Subtel Art of Not Giving F*ck </b></em></li>
+        <li><em><b> Subtle Art of Not Giving F*ck </b></em></li>
         <li>Let us <B>C</B></li>
     </ul>
 
