--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
     </tr>
 </table>
 <hr size="2">
-<a href="https://github.com/aniimeshghosh/democv/blob/main/contact.html">Contact</a>
+<a href="contact.html">Contact</a>
 </body>
 </html>
